welcome.lessons.welcome.loopwhile.WhileMoria.scala.error
Balin:5: error: ')' expected but 'while' found.
while( !estFaceMur()){
^